// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utbetalinger with kontonummer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt=""
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              aria-label="Direktelenke til denne seksjonen"
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <dl
              class="list"
            >
              <div
                class="list-item"
              >
                <dt>
                  <span
                    class="navds-label"
                  >
                    Kontonummer
                  </span>
                </dt>
                <dd>
                  1234 56 78911
                </dd>
              </div>
            </dl>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt=""
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Utbetalinger with utenlandsk bank renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt=""
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              aria-label="Direktelenke til denne seksjonen"
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <dl
              class="list"
            >
              <div
                class="list-item"
              >
                <dt>
                  <span
                    class="navds-label"
                  >
                    Bank
                  </span>
                </dt>
                <dd>
                  <p
                    class="navds-body-short"
                  >
                    Dominion Bank
                  </p>
                  <p
                    class="navds-body-short"
                  >
                    Forente Arabiske Emirater
                  </p>
                </dd>
              </div>
              <div
                class="list-item"
              >
                <dt>
                  <span
                    class="navds-label"
                  >
                    Kontonummer / IBAN
                  </span>
                </dt>
                <dd>
                  AE460090000000123456789
                </dd>
              </div>
              <div
                class="list-item"
              >
                <dt>
                  <span
                    class="navds-label"
                  >
                    Valuta
                  </span>
                </dt>
                <dd>
                  Amerikansk dollar
                </dd>
              </div>
              <div
                class="list-item"
              >
                <dt>
                  <span
                    class="navds-label"
                  >
                    BIC / SWIFT-kode
                  </span>
                </dt>
                <dd>
                  EBILAEADXXX
                </dd>
              </div>
            </dl>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt=""
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
